Remove duplicate image element in index.html

--- a/index.html
+++ b/index.html
@@ -60,14 +60,12 @@
 
 <body>
 
-  <h1>HERO.IA – Gerar Rascunho</h1>
+  <img id="preview" class="preview-image" src="assets/img/foto1.jpg" alt="Pré-visualização" loading="lazy" style="display:block; width:100%; max-width:640px; margin:0 auto 12px auto; border-radius:12px; border:1px solid #ddd; background:#e2e8f0; object-fit:cover;">
 
   <label><strong>Cole a mensagem do cliente:</strong></label>
   <textarea id="inputMensagem"></textarea>
 
   <button id="gerarBtn">HERO.IA – GERAR RASCUNHO</button>
-
-  <img id="preview" class="preview-image" src="assets/img/foto1.jpg" alt="Pré-visualização" loading="lazy" style="display:block; width:100%; max-width:640px; margin:12px auto; border-radius:12px; border:1px solid #ddd; background:#e2e8f0; object-fit:cover;">
 
   <div id="resultadoBox" style="display:none;"></div>
 
