Add emoji to the generate draft button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <label><strong>Cole a mensagem do cliente:</strong></label>
   <textarea id="inputMensagem"></textarea>
 
-  <button id="gerarBtn">HERO.IA – GERAR RASCUNHO</button>
+  <button id="gerarBtn">🤖 HERO.IA – GERAR RASCUNHO</button>
 
   <div id="resultadoBox" style="display:none;"></div>
 
