Restore index.html from commit c6403ed4e9e173afcb0d07afdec60ceef73b2b7d

--- a/index.html
+++ b/index.html
@@ -1,205 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>HERO.IA – Gerar Rascunho</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
-      padding: 16px;
-    }
-    h1 {
-      text-align: center;
-    }
-    textarea {
-      width: 100%;
-      min-height: 120px;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 12px;
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-    }
-    #gerarBtn {
-      background: #2563eb;
-      color: #fff;
-    }
-    #copyBtn {
-      background: #16a34a;
-      color: #fff;
-      display: none;
-    }
-    #resultadoBox {
-      margin-top: 16px;
-      padding: 12px;
-      background: #fff;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-      white-space: pre-wrap;
-      font-size: 15px;
-    }
-    .hint {
-      margin-top: 10px;
-      font-size: 13px;
-      color: #555;
-      text-align: center;
-    }
-  </style>
-</head>
-
-<body>
-
-  <img id="preview" class="preview-image" src="assets/img/foto1.jpg" alt="Pré-visualização" loading="lazy" style="display:block; width:100%; max-width:640px; margin:0 auto 12px auto; border-radius:12px; border:1px solid #ddd; background:#e2e8f0; object-fit:cover;">
-
-  <label><strong>Cole a mensagem do cliente:</strong></label>
-  <textarea id="inputMensagem"></textarea>
-
-  <button id="gerarBtn">🤖 HERO.IA – GERAR RASCUNHO</button>
-
-  <div id="resultadoBox" style="display:none;"></div>
-
-  <button id="copyBtn">📋 Copiar rascunho</button>
-
-  <div class="hint">
-    💡 A resposta é copiada automaticamente.  
-    Basta voltar ao WhatsApp, colar e enviar.
-  </div>
-
-<script>
-  const DEFAULT_API_BASE = "https://hero-ia-backend.onrender.com";
-  const DEFAULT_USER_KEY = "2ed2a50c-5a48-4cb3-b06b-4b6240a8d0b1";
-
-  function getApiBase() {
-    return (
-      window.HERO_API_BASE ||
-      localStorage.getItem("hero_api_base") ||
-      DEFAULT_API_BASE
-    );
-  }
-
-  function getUserKey() {
-    return (
-      window.HERO_USER_KEY ||
-      localStorage.getItem("hero_user_key") ||
-      DEFAULT_USER_KEY
-    );
-  }
-
-  function copyToClipboard(text) {
-    if (!text) return;
-    if (navigator.clipboard && navigator.clipboard.writeText) {
-      navigator.clipboard.writeText(text).catch(() => fallbackCopy(text));
-    } else {
-      fallbackCopy(text);
-    }
-  }
-
-  function fallbackCopy(text) {
-    const textarea = document.createElement("textarea");
-    textarea.value = text;
-    textarea.style.position = "fixed";
-    textarea.style.opacity = "0";
-    document.body.appendChild(textarea);
-    textarea.focus();
-    textarea.select();
-    document.execCommand("copy");
-    document.body.removeChild(textarea);
-  }
-
-  document.getElementById("gerarBtn").addEventListener("click", async () => {
-    const msg = document.getElementById("inputMensagem").value.trim();
-    if (!msg) {
-      alert("Cole a mensagem do cliente primeiro.");
-      return;
-    }
-
-    // Enviar somente a última mensagem (string), coerente com a extensão WhatsApp
-    const mensagens = [msg];
-
-    const resultadoBox = document.getElementById("resultadoBox");
-    const copyBtn = document.getElementById("copyBtn");
-
-    resultadoBox.style.display = "block";
-    resultadoBox.innerText = "⏳ Gerando rascunho...";
-    copyBtn.style.display = "none";
-
-    try {
-      const res = await fetch(`${getApiBase()}/whatsapp/draft`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "x-user-key": getUserKey()
-        },
-        body: JSON.stringify({ mensagens })
-      });
-
-      if (!res.ok) {
-        resultadoBox.innerText = `Erro ${res.status}: não foi possível gerar o rascunho.`;
-        return;
-      }
-
-      const data = await res.json();
-
-      let textoFinal = "";
-
-      if (data.draft) {
-        // Pode vir string JSON ou string simples
-        try {
-          const parsed = typeof data.draft === "string" ? JSON.parse(data.draft) : data.draft;
-          if (parsed && typeof parsed === "object") {
-            const lines = [];
-            if (parsed.resposta) lines.push(parsed.resposta);
-            if (Array.isArray(parsed.empreendimentos) && parsed.empreendimentos.length > 0) {
-              lines.push("\nEmpreendimentos:");
-              parsed.empreendimentos.forEach((e, i) => {
-                const nome = e.nome || "";
-                const bairro = e.bairro || "";
-                const tipologias = e.tipologias || e.tipologia || "";
-                const entrega = e.entrega || "";
-                lines.push(`${i + 1}) ${nome} — ${bairro} — Tipologias: ${tipologias} — ${entrega}`);
-              });
-            }
-            textoFinal = lines.join("\n").trim();
-          } else {
-            textoFinal = String(data.draft || "").trim();
-          }
-        } catch (err) {
-          textoFinal = String(data.draft || "").trim();
-        }
-      } else if (data.resposta) {
-        textoFinal = data.resposta;
-      }
-
-      if (!textoFinal) {
-        resultadoBox.innerText = "Nenhum rascunho retornado.";
-        return;
-      }
-
-      resultadoBox.innerText = textoFinal;
-
-      // 🔥 COPIA AUTOMÁTICA
-      copyToClipboard(textoFinal);
-
-      // Botão manual
-      copyBtn.style.display = "block";
-      copyBtn.onclick = () => copyToClipboard(textoFinal);
-
-    } catch (e) {
-      resultadoBox.innerText = "Erro ao gerar resposta.";
-    }
-  });
-</script>
-
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Hero.IA</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to Hero.IA</h1>
+    </header>
+    <main>
+      <p>Your AI assistant for every task!</p>
+    </main>
+    <footer>
+      <p>Copyright © 2023 Hero.IA</p>
+    </footer>
+  </body>
 </html>
